# trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  crush.json  pyproject.toml
.claude/: ralph-loop.local.md  settings.json
.claude/agents/: bos-trading-analyzer.md  dev-test-engineer.md
.claude/skills/Coinank数据接口/: SKILL.md
.claude/skills/MCP工具编写/: SKILL.md
.claude/skills/MCP工具编写/reference/: fastmcp-api.md
.claude/skills/交易前必读/: SKILL.md
.claude/skills/交易教训/: SKILL.md
.claude/skills/交易教训/cases/: 2026-01-17-SAND做空失败.md
.claude/skills/交易方法整理/BOS突破交易法/: SKILL.md
.claude/skills/交易时段/: SKILL.md
.claude/skills/币安合约交易/: SKILL.md
.claude/skills/最新指令/: SKILL.md
.cursor/: mcp.json
.github/workflows/: deploy.yml
docs/: command.md  mcp规范.md  todo.md  交易前必读.md  最新指令.md  计划任务.md
mcps/: binance_futures.py  coinank.py  slack_notify.py  time_tools.py
tests/: __init__.py  conftest.py  test_binance_futures.py  test_coinank.py  test_slack_notify.py  test_time_tools.py
