[project]
name = "trader"
version = "0.1.0"
description = "交易的神"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "fastmcp>=2.9.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
    "binance-futures-connector>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
